objects/SmarterPay_Direct_Debit_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Bank_Account_Checker_Endpoint__c</fullName>
        <label>Bank Account Checker Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Next_Collection_Date_Endpoint__c</fullName>
        <label>Calculate Next Collection Date Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Next_Collection_Date_Endpoint__c</fullName>
        <label>List Next Collection Date Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SmarterPay Direct Debit Settings</label>
</CustomObject>